# esbjerg-storm-surge-extremes-publication

./: .gitignore  3panel_fig_sorter.Rmd  COASTAL_55Y.txt  COASTAL_all.txt  ETOPO1_batimetri_3_several_depths.Rmd  ETOPO1_batimetri_4.Rmd  GESLA_data_checker_4_FAST_RDSFIX.py  GESLA_index_maker_2.Rmd  GESLA_index_maker_2.py  NOT_COASTAL.txt  QC_duplicates_GESLA_3.Rmd  QC_summary.csv  QUICK_START.txt  README.md  RUN_ORDER.txt  RunChunck.scr  RunRmd.sh  S_vs_NS_tester_10_resampling_GOF_with_pooledPIT.py  S_vs_NS_tester_10_resampling_mu_sigma.py  S_vs_NS_tester_9_resampling.py  analysis_seabed_slope_or_depth_4_boxplots.Rmd  analysis_seabed_slope_or_depth_vs_34_4_alldata_also_FAST_PARALLEL.Rmd  analysis_seabed_slope_or_depth_vs_34_4_alldata_also_FAST_PARALLEL_FIX.Rmd  analysis_seabed_slope_or_depth_vs_34_new_3_GLOBALBEST_ANNOTATED_FIXED.Rmd  beta_histogram_3_stacked_and_sidebyside.Rmd  beta_histogram_STACKED_2.Rmd  beta_histogram_STACKED_final.Rmd  build_tar_archive_updated3.sh  caseA_table_and_beta_hist.py  coastline_slope_from_ascii.py  compare_slope_and_depth_variants_1.Rmd  consider_collected_S_vs_NS_results_4.Rmd  consider_collected_S_vs_NS_results_4.py  do  factor_analysis_1_FIXED.Rmd  find_coastal_gesla.py  find_yrange.py  ftide_residuals_5_SH_winteralso.Rmd  ftide_residuals_5_SH_winteralso.nb.html  ftide_residuals_5_SH_winteralso_SINGLE_STATION_CHECKER.Rmd  (+29 more)
DATA/: GESLA_FILENAMES_HOME2.txt  gesla_station_index.csv  station_metadata.rds
OLD/: DMIpaths_analysis_seabed_slope_or_depth_vs_34_4_alldata_also.Rmd  GESLA_data_checker_4.Rmd  GESLA_index_maker_2.Rmd  README.md  (+27 more)
(+2104 files in other folders)
