[project]
name = "new"
version = "0.1.0"
description = "uv setup for the manuscript XYZ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyreadr>=0.5.4",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "xarray>=2026.1.0",
]
